feat: add cv in main

--- a/index.html
+++ b/index.html
@@ -2,8 +2,34 @@
 <HTML> 
         <HEAD> 
             <META charset="utf-8"> 
-            <TITLE>Konstantin Vlasenko</TITLE> 
+            <TITLE>Konstantin Vlasenko</TITLE>
+            <style>
+                    main{ 
+                            display:flex;
+                            justify-content: center;
+                    }
+            </style>
         <BODY> 
+                <main>
+                <picture><img src="avatar.jpg" style: height="100 px", width="120 px";></picture>
+                <h5>Konstantin Vlasenko</h5>
+                <ol>
+                        <li><strong>Contact information: </strong>+375 29 9759839, telegram: @knstntn_vl</li>
+                        <li><strong>Brief information: </strong>The main goal is to get well-paid job there I can easily develop myself.</li>
+                        <li><strong>Experience in programing: </strong>I have no experience in programing.</li>
+                        <li><strong>Code examples: </strong><br> <code>
+                                function Calculator() {<br>
+                                        this.method={<br>
+                                            '+': (a,b)=>a+b,<br>
+                                            '-': (a,b)=>a-b,<br>
+                                        }}
+                        </code></li>
+                        <li><strong>Work experience: </strong></li>
+                        <li><strong>Education: </strong>Belarusian National Technical University, spesiality: Thermal power plants, power engineer.</li>
+                        <li><strong>Level of English: </strong>A2 (according to training.by test)</li>
+                </ol>
+
+                </main>
 
         </BODY> 
 </HTML> 
